# sony-3dgs

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.devcontainer/scripts/: post-attach.sh
app/: chat.py  db_conn.py  layout.py  logging_config.py  main.py  settings.py  unity_conn.py  views.py
app/ai/: agent.py  settings.py  tools.py  vector_db.py
app/components/: body.py  chat.py  documents_body.py  header.py  home_body.py  settings_body.py  sidebar.py  top_body.py  unity_body.py  voice_body.py
app/controller/: documents_manager.py  file_controller.py  settings_manager.py
app/models/: database_models.py  file_models.py  settings_models.py
app/viewmodels/: documents_manager.py  settings_manager.py  utils.py
app/views/: core.py  documents_view.py  header_view.py  home_view.py  layout.py  settings_view.py  template_view.py  top_view.py  unity_view.py  views.py  voice_view.py
app/whisper/: whisper.py
db/postgres/init/: 1_init.sql  2_insert_sample.sh  init.sql  sample.md
infra/app/: Dockerfile
tests/: socket_server_test.py
