[tool.poetry]
name = "spadge"
version = "0.1.0"
description = ""
authors = ["snow7y <ktc2243020002@edu.kyoto-tech.ac.jp>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.24.1"
langchain = "^0.3.8"
langchain-openai = "^0.2.9"
langchain-community = "^0.3.7"
tavily-python = "^0.5.0"
langgraph-checkpoint-sqlite = "^2.0.1"
langgraph = "^0.2.53"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Ruffの設定
[tool.ruff]
target-version = "py312"
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
]

line-length = 120
indent-width = 4


[tool.ruff.lint]
# PEP8のどのルールを対象に警告を出すか
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "PL",
    "UP",
]
ignore = [
]
fixable = ["ALL"]
